--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 
 <body>
-    
+    <div id="main">
+        <div id="phone">
+
+        </div>
+        <div>
+
+        </div>
+    </div>
 </body>
 
 </html>
