--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="main">
         <div id="phone">
-
+            <iframe src="home.html" frameborder="0" name="phone" id="phone"></iframe>
         </div>
         <div>
 
