main buttons added

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 <body>
     <div id="main">
         <div id="phone">
-            <iframe src="home.html" frameborder="0" name="phone" id="phone"></iframe>
+            <iframe src="home.html" frameborder="0" name="phone" id="phone">
+                Seu navegador não é compatível com iframes.
+            </iframe>
         </div>
-        <div>
-
+        <div id="buttons">
+            <a href="#" target="phone"><img src="images/logo-home.jpg" alt="Botão home"></a><br>
+            <a href="#" target="phone"><img src="images/logo-youtube.jpg" alt="Botão youtube"></a><br>
+            <a href="#" target="phone"><img src="images/logo-github.jpg" alt="Botão github"></a><br>
+            <a href="#" target="phone"><img src="images/logo-instagram.jpg" alt="Botão instagram"></a><br>
+            <a href="#" target="phone"><img src="images/logo-twitter.jpg" alt="Botão twitter"></a><br>
+            <a href="#" target="phone"><img src="images/logo-facebook.jpg" alt="Botão facebook"></a>
         </div>
     </div>
 </body>
