--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </iframe>
         </div>
         <div id="buttons">
-            <a href="#" target="phone"><img src="images/logo-home.jpg" alt="Botão home"></a><br>
+            <a href="home.html" target="phone"><img src="images/logo-home.jpg" alt="Botão home"></a><br>
             <a href="#" target="phone"><img src="images/logo-youtube.jpg" alt="Botão youtube"></a><br>
             <a href="#" target="phone"><img src="images/logo-github.jpg" alt="Botão github"></a><br>
             <a href="#" target="phone"><img src="images/logo-instagram.jpg" alt="Botão instagram"></a><br>
