social media screen on phone

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <div id="buttons">
             <a href="home.html" target="phone"><img src="images/logo-home.jpg" alt="Botão home"></a><br>
-            <a href="#" target="phone"><img src="images/logo-youtube.jpg" alt="Botão youtube"></a><br>
-            <a href="#" target="phone"><img src="images/logo-github.jpg" alt="Botão github"></a><br>
-            <a href="#" target="phone"><img src="images/logo-instagram.jpg" alt="Botão instagram"></a><br>
-            <a href="#" target="phone"><img src="images/logo-twitter.jpg" alt="Botão twitter"></a><br>
-            <a href="#" target="phone"><img src="images/logo-facebook.jpg" alt="Botão facebook"></a>
+            <a href="youtube.html" target="phone"><img src="images/logo-youtube.jpg" alt="Botão youtube"></a><br>
+            <a href="github.html" target="phone"><img src="images/logo-github.jpg" alt="Botão github"></a><br>
+            <a href="instagram.html" target="phone"><img src="images/logo-instagram.jpg" alt="Botão instagram"></a><br>
+            <a href="twitter.html" target="phone"><img src="images/logo-twitter.jpg" alt="Botão twitter"></a><br>
+            <a href="facebook.html" target="phone"><img src="images/logo-facebook.jpg" alt="Botão facebook"></a>
         </div>
     </div>
 </body>
